--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "bolt-expo-nativewind",
-    "slug": "bolt-expo-nativewind",
+    "name": "CircleUp",
+    "slug": "circleup-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -37,7 +37,7 @@
       "typedRoutes": true
     },
     "android": {
-      "package": "com.bhavikbhanushali.boltexponativewind",
+      "package": "com.circleUp.app",
       "googleServicesFile": "./google-services.json"
     }
   }
