--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
       "typedRoutes": true
     },
     "android": {
-      "package": "com.bhavikbhanushali.boltexponativewind",
+      "package": "com.circleUp.app",
       "googleServicesFile": "./google-services.json"
     },
     "extra": {
