add ios service file

--- a/app.json
+++ b/app.json
@@ -9,7 +9,12 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.circleUp.app",
+      "config": {
+        "usesNonExemptEncryption": false
+      },
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "web": {
       "bundler": "metro",
@@ -40,6 +45,7 @@
       "package": "com.circleUp.app",
       "googleServicesFile": "./google-services.json"
     },
+    
     "extra": {
       "router": {},
       "eas": {
