configuartion for package name and service file

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.circleUp.app",
+      "bundleIdentifier": "com.brilworks.circleUp",
       "config": {
         "usesNonExemptEncryption": false
       },
@@ -42,7 +42,7 @@
       "typedRoutes": true
     },
     "android": {
-      "package": "com.circleUp.app",
+      "package": "com.brilworks.circleUp",
       "googleServicesFile": "./google-services.json"
     },
     
