--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.circleUp.app</string>
+	<string>com.brilworks.circleUp</string>
 	<key>PROJECT_ID</key>
 	<string>circleup-63110</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:540064305831:ios:3703a11cee5ec41ec80182</string>
+	<string>1:540064305831:ios:75a0c7cf9208efd3c80182</string>
 </dict>
 </plist>
