--- a/eas.json
+++ b/eas.json
@@ -12,10 +12,18 @@
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "distribution": "store"
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "appleId": "bhavik.b@brilworks.com",
+        "ascAppId": "6753784281", 
+        "appleTeamId": "K7Y5QY6LMX", 
+        "bundleIdentifier": "com.brilworks.circleUp"
+      }
+    }
   }
 }
