--- a/eas.json
+++ b/eas.json
@@ -6,14 +6,41 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "FIREBASE_API_KEY": "AIzaSyBpmR20DaOa2Plt8qvnfQiVaa8aRYR96ds",
+        "FIREBASE_AUTH_DOMAIN": "circleup-63110.firebaseapp.com",
+        "FIREBASE_PROJECT_ID": "circleup-63110",
+        "FIREBASE_STORAGE_BUCKET": "circleup-63110.firebasestorage.app",
+        "FIREBASE_MESSAGING_SENDER_ID": "540064305831",
+        "FIREBASE_APP_ID": "1:540064305831:android:28ce9d59abe79b52c80182",
+        "FIREBASE_DATABASE_URL": "https://circleup-63110-default-rtdb.firebaseio.com"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "FIREBASE_API_KEY": "AIzaSyBpmR20DaOa2Plt8qvnfQiVaa8aRYR96ds",
+        "FIREBASE_AUTH_DOMAIN": "circleup-63110.firebaseapp.com",
+        "FIREBASE_PROJECT_ID": "circleup-63110",
+        "FIREBASE_STORAGE_BUCKET": "circleup-63110.firebasestorage.app",
+        "FIREBASE_MESSAGING_SENDER_ID": "540064305831",
+        "FIREBASE_APP_ID": "1:540064305831:android:28ce9d59abe79b52c80182",
+        "FIREBASE_DATABASE_URL": "https://circleup-63110-default-rtdb.firebaseio.com"
+      }
     },
     "production": {
       "autoIncrement": true,
-      "distribution": "store"
+      "distribution": "store",
+      "env": {
+        "FIREBASE_API_KEY": "AIzaSyBpmR20DaOa2Plt8qvnfQiVaa8aRYR96ds",
+        "FIREBASE_AUTH_DOMAIN": "circleup-63110.firebaseapp.com",
+        "FIREBASE_PROJECT_ID": "circleup-63110",
+        "FIREBASE_STORAGE_BUCKET": "circleup-63110.firebasestorage.app",
+        "FIREBASE_MESSAGING_SENDER_ID": "540064305831",
+        "FIREBASE_APP_ID": "1:540064305831:android:28ce9d59abe79b52c80182",
+        "FIREBASE_DATABASE_URL": "https://circleup-63110-default-rtdb.firebaseio.com"
+      }
     }
   },
   "submit": {
