--- a/app.json
+++ b/app.json
@@ -14,7 +14,10 @@
       "config": {
         "usesNonExemptEncryption": false
       },
-      "googleServicesFile": "./GoogleService-Info.plist"
+      "googleServicesFile": "./GoogleService-Info.plist",
+      "infoPlist": {
+        "NSContactsUsageDescription": "This app uses your contacts to help you connect with friends."
+      }
     },
     "web": {
       "bundler": "metro",
