--- a/app.json
+++ b/app.json
@@ -39,7 +39,8 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      ["expo-updates",{"username":"dineshkachhot@gmail.com"}]
     ],
     "experiments": {
       "typedRoutes": true
