--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ FIREBASE_STORAGE_BUCKET=your-project.appspot.com
 FIREBASE_MESSAGING_SENDER_ID=your-sender-id  
 FIREBASE_APP_ID=your-app-id  
 FIREBASE_DATABASE_URL=https://your-project-default-rtdb.firebaseio.com 
+FIREBASE_MEASUREMENT_ID=your-measurement-id
