feat: Implement Firebase Analytics for screen view and user interaction tracking with updated build configurations.

--- a/app.json
+++ b/app.json
@@ -45,6 +45,16 @@
         {
           "username": "dineshkachhot@gmail.com"
         }
+      ],
+      "@react-native-firebase/app",
+      "@react-native-firebase/analytics",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
       ]
     ],
     "experiments": {
