--- a/package.json
+++ b/package.json
@@ -23,54 +23,55 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.3",
     "@lucide/lab": "^0.1.2",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
-    "@react-native-firebase/analytics": "^23.7.0",
-    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-firebase/analytics": "latest",
+    "@react-native-firebase/app": "latest",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.90.2",
-    "expo": "latest",
-    "expo-blur": "~14.1.3",
-    "expo-build-properties": "~0.14.8",
-    "expo-constants": "~17.1.3",
-    "expo-contacts": "~14.2.5",
-    "expo-dev-client": "~5.2.4",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.3",
-    "expo-linear-gradient": "~14.1.3",
-    "expo-linking": "~7.1.7",
-    "expo-notifications": "~0.31.4",
-    "expo-router": "~5.1.8",
-    "expo-splash-screen": "~0.30.6",
-    "expo-status-bar": "~2.2.2",
-    "expo-symbols": "~0.4.3",
-    "expo-system-ui": "~5.0.5",
-    "expo-updates": "~0.28.17",
-    "expo-web-browser": "~14.2.0",
+    "expo": "~54.0.27",
+    "expo-blur": "~15.0.8",
+    "expo-build-properties": "~1.0.10",
+    "expo-constants": "~18.0.11",
+    "expo-contacts": "~15.0.11",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-notifications": "~0.32.14",
+    "expo-router": "~6.0.17",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.15",
+    "expo-web-browser": "~15.0.10",
     "firebase": "^12.3.0",
     "lucide-react-native": "^0.475.0",
     "mobx": "^6.13.7",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-gesture-handler": "~2.24.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-reanimated": "~4.2.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "dotenv": "^17.2.2",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
