--- a/package.json
+++ b/package.json
@@ -32,25 +32,25 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.90.2",
-    "expo": "~54.0.27",
+    "expo": "latest",
     "expo-blur": "~15.0.8",
     "expo-build-properties": "~1.0.10",
-    "expo-constants": "~18.0.11",
+    "expo-constants": "~18.0.12",
     "expo-contacts": "~15.0.11",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.10",
-    "expo-notifications": "~0.32.14",
-    "expo-router": "~6.0.17",
+    "expo-notifications": "~0.32.15",
+    "expo-router": "~6.0.19",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-updates": "~29.0.15",
     "expo-web-browser": "~15.0.10",
-    "firebase": "^12.3.0",
+    "firebase": "latest",
     "lucide-react-native": "^0.475.0",
     "mobx": "^6.13.7",
     "react": "19.1.0",
@@ -58,14 +58,14 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~4.2.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.7.1"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
