--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,15 @@ web/
 
 .vercel
 
+# Sensitive files - Google Cloud Service Account
 circleup-63110-0c1125739074.json
+*.json
+!package.json
+!tsconfig.json
+!app.json
+!eas.json
+!vercel.json
+
+# Build artifacts
+*.aab
+*.apk
